openpearl-code/testsuite/must_not_compile/01_typeFixed/032_fixed_illegal_constant.expect
032_fixed_illegal_constant.prl:7:10: ERROR : Syntax error :extraneous input 'a45' expecting {';', '*', '**', 'FIT', '/', '-', '+', '//', 'REM', 'CAT', '><', 'CSHIFT', '<>', 'SHIFT', '<', 'LT', '<=', 'LE', '>', 'GT', '>=', 'GE', '==', 'EQ', '/=', 'NE', 'AND', 'OR', 'EXOR', IntegerConstant}
  f := 123a45;
            ^
