openpearl-code/testsuite/must_not_compile/01_typeFixed/032_fixed_illegal_constant.prl
MODULE(m1);

PROBLEM;

a: TASK;
  DCL f FIXED(63);
  f := 123a45;   ! mark of error should be at 'a'
END;

MODEND;

